pluma_parser/tests/snapshots/parse_success__list_empty.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "[]"
---

=== Source ===
[]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        2,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                2,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        2,
                    ),
                    kind: List(
                        [],
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

