pluma_parser/tests/snapshots/parse_success__list_of_expressions.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "[1, callThing(), repeat 3 times \"wow\"]"
---

=== Source ===
[1, callThing(), repeat 3 times "wow"]

=== Comments ===
{}

=== AST ===
Module(0, 38) [
    TopLevelStatementNode {
        pos: (
            0,
            38,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    0,
                    38,
                ),
                kind: List {
                    elements: [
                        ExprNode {
                            pos: (
                                1,
                                2,
                            ),
                            kind: Literal {
                                literal: LiteralNode {
                                    pos: (
                                        1,
                                        2,
                                    ),
                                    kind: IntDecimal(
                                        1,
                                    ),
                                },
                            },
                            typ: Unknown,
                        },
                        ExprNode {
                            pos: (
                                4,
                                15,
                            ),
                            kind: Call {
                                call: CallNode {
                                    pos: (
                                        4,
                                        15,
                                    ),
                                    callee: ExprNode {
                                        pos: (
                                            4,
                                            13,
                                        ),
                                        kind: Identifier {
                                            ident: Ident(4, 13) "callThing",
                                        },
                                        typ: Unknown,
                                    },
                                    args: [
                                        ExprNode {
                                            pos: (
                                                13,
                                                15,
                                            ),
                                            kind: EmptyTuple,
                                            typ: Unknown,
                                        },
                                    ],
                                    typ: Unknown,
                                },
                            },
                            typ: Unknown,
                        },
                        ExprNode {
                            pos: (
                                17,
                                36,
                            ),
                            kind: Call {
                                call: CallNode {
                                    pos: (
                                        17,
                                        36,
                                    ),
                                    callee: ExprNode {
                                        pos: (
                                            17,
                                            31,
                                        ),
                                        kind: MultiPartIdentifier {
                                            parts: [
                                                Ident(17, 23) "repeat",
                                                Ident(26, 31) "times",
                                            ],
                                        },
                                        typ: Unknown,
                                    },
                                    args: [
                                        ExprNode {
                                            pos: (
                                                24,
                                                25,
                                            ),
                                            kind: Literal {
                                                literal: LiteralNode {
                                                    pos: (
                                                        24,
                                                        25,
                                                    ),
                                                    kind: IntDecimal(
                                                        3,
                                                    ),
                                                },
                                            },
                                            typ: Unknown,
                                        },
                                        ExprNode {
                                            pos: (
                                                33,
                                                36,
                                            ),
                                            kind: Literal {
                                                literal: LiteralNode {
                                                    pos: (
                                                        33,
                                                        36,
                                                    ),
                                                    kind: Str(
                                                        "wow",
                                                    ),
                                                },
                                            },
                                            typ: Unknown,
                                        },
                                    ],
                                    typ: Unknown,
                                },
                            },
                            typ: Unknown,
                        },
                    ],
                },
                typ: Unknown,
            },
        ),
    },
]

