pluma_parser/tests/snapshots/parse_success__list_of_numbers.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "[1, 2, 3]"
---

=== Source ===
[1, 2, 3]

=== Comments ===
{}

=== AST ===
Module(0, 9) [
    TopLevelStatement(0, 9) Expr(
        ExprNode {
            pos: (
                0,
                9,
            ),
            kind: List {
                elements: [
                    ExprNode {
                        pos: (
                            1,
                            2,
                        ),
                        kind: Literal {
                            literal: Literal(1, 2) IntDecimal(1),
                        },
                        typ: Unknown,
                    },
                    ExprNode {
                        pos: (
                            4,
                            5,
                        ),
                        kind: Literal {
                            literal: Literal(4, 5) IntDecimal(2),
                        },
                        typ: Unknown,
                    },
                    ExprNode {
                        pos: (
                            7,
                            8,
                        ),
                        kind: Literal {
                            literal: Literal(7, 8) IntDecimal(3),
                        },
                        typ: Unknown,
                    },
                ],
            },
            typ: Unknown,
        },
    ),
]

