pluma_parser/tests/snapshots/parse_success__number.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "47"
---

=== Source ===
47

=== Comments ===
{}

=== AST ===
Module(0, 2) [
    TopLevelStatement(0, 2) Expr(
        ExprNode {
            pos: (
                0,
                2,
            ),
            kind: Literal {
                literal: Literal(0, 2) IntDecimal(47),
            },
            typ: Unknown,
        },
    ),
]

