pluma_parser/tests/snapshots/parse_success__parenthesized.snap
---
source: pluma_parser/tests/parse_success.rs
expression: (1)
---

=== Source ===
(1)

=== Comments ===
{}

=== AST ===
Module(0, 3) [
    TopLevelStatement(0, 3) Expr(
        ExprNode {
            pos: (
                0,
                3,
            ),
            kind: Grouping {
                inner: ExprNode {
                    pos: (
                        1,
                        2,
                    ),
                    kind: Literal {
                        literal: Literal(1, 2) IntDecimal(1),
                    },
                    typ: Unknown,
                },
            },
            typ: Unknown,
        },
    ),
]

