pluma_parser/tests/snapshots/parse_success__private_defs.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def isPublic() {}\n\nprivate\n\ndef isPrivate() {}"
---

=== Source ===
def isPublic() {}

private

def isPrivate() {}

=== Comments ===
{}

=== AST ===
Module(0, 46) [
    TopLevelStatement(0, 17) Def(
        DefNode {
            pos: (
                0,
                17,
            ),
            visibility: Public,
            kind: Function {
                signature: [
                    (
                        Ident(4, 12) "isPublic",
                        TypeExprNode {
                            pos: (
                                12,
                                14,
                            ),
                            kind: EmptyTuple,
                            typ: Unknown,
                        },
                    ),
                ],
            },
            return_type: None,
            generic_type_constraints: [],
            block: Block(15, 17) ([]) [],
        },
    ),
    TopLevelStatement(19, 26) VisibilityMarker(
        Private,
    ),
    TopLevelStatement(28, 46) Def(
        DefNode {
            pos: (
                28,
                46,
            ),
            visibility: Private,
            kind: Function {
                signature: [
                    (
                        Ident(32, 41) "isPrivate",
                        TypeExprNode {
                            pos: (
                                41,
                                43,
                            ),
                            kind: EmptyTuple,
                            typ: Unknown,
                        },
                    ),
                ],
            },
            return_type: None,
            generic_type_constraints: [],
            block: Block(44, 46) ([]) [],
        },
    ),
]

