pluma_parser/tests/snapshots/parse_success__regex_across_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "/\"w\"\n  (\n  \"o\"\n  |\n  \"a\")? \"w\"\n/"
---

=== Source ===
/"w"
  (
  "o"
  |
  "a")? "w"
/

=== Comments ===
{}

=== AST ===
Module(0, 32) [
    TopLevelStatementNode {
        pos: (
            0,
            32,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    0,
                    32,
                ),
                kind: RegExpr {
                    regex: RegExprNode {
                        pos: (
                            0,
                            0,
                        ),
                        kind: Sequence(
                            [
                                RegExprNode {
                                    pos: (
                                        2,
                                        3,
                                    ),
                                    kind: Literal(
                                        "w",
                                    ),
                                },
                                RegExprNode {
                                    pos: (
                                        7,
                                        26,
                                    ),
                                    kind: OneOrZero(
                                        RegExprNode {
                                            pos: (
                                                7,
                                                8,
                                            ),
                                            kind: Grouping(
                                                RegExprNode {
                                                    pos: (
                                                        12,
                                                        23,
                                                    ),
                                                    kind: Alternation(
                                                        [
                                                            RegExprNode {
                                                                pos: (
                                                                    12,
                                                                    13,
                                                                ),
                                                                kind: Literal(
                                                                    "o",
                                                                ),
                                                            },
                                                            RegExprNode {
                                                                pos: (
                                                                    22,
                                                                    23,
                                                                ),
                                                                kind: Literal(
                                                                    "a",
                                                                ),
                                                            },
                                                        ],
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                                RegExprNode {
                                    pos: (
                                        28,
                                        29,
                                    ),
                                    kind: Literal(
                                        "w",
                                    ),
                                },
                            ],
                        ),
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

