pluma_parser/tests/snapshots/parse_success__regex_exact_count.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "/\"aa\" \"b\"{18} \"cc\"/"
---

=== Source ===
/"aa" "b"{18} "cc"/

=== Comments ===
{}

=== AST ===
Module(0, 19) [
    TopLevelStatementNode {
        pos: (
            0,
            19,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    0,
                    19,
                ),
                kind: RegExpr {
                    regex: RegExprNode {
                        pos: (
                            0,
                            0,
                        ),
                        kind: Sequence(
                            [
                                RegExprNode {
                                    pos: (
                                        2,
                                        4,
                                    ),
                                    kind: Literal(
                                        "aa",
                                    ),
                                },
                                RegExprNode {
                                    pos: (
                                        7,
                                        13,
                                    ),
                                    kind: ExactCount(
                                        RegExprNode {
                                            pos: (
                                                7,
                                                8,
                                            ),
                                            kind: Literal(
                                                "b",
                                            ),
                                        },
                                        18,
                                    ),
                                },
                                RegExprNode {
                                    pos: (
                                        15,
                                        17,
                                    ),
                                    kind: Literal(
                                        "cc",
                                    ),
                                },
                            ],
                        ),
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

