pluma_parser/tests/snapshots/parse_success__regex_literals.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "/\"w\" \"oooo\" \"w\"/"
---

=== Source ===
/"w" "oooo" "w"/

=== Comments ===
{}

=== AST ===
Module(0, 16) [
    TopLevelStatementNode {
        pos: (
            0,
            16,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    0,
                    16,
                ),
                kind: RegExpr {
                    regex: RegExprNode {
                        pos: (
                            0,
                            0,
                        ),
                        kind: Sequence(
                            [
                                RegExprNode {
                                    pos: (
                                        2,
                                        3,
                                    ),
                                    kind: Literal(
                                        "w",
                                    ),
                                },
                                RegExprNode {
                                    pos: (
                                        6,
                                        10,
                                    ),
                                    kind: Literal(
                                        "oooo",
                                    ),
                                },
                                RegExprNode {
                                    pos: (
                                        13,
                                        14,
                                    ),
                                    kind: Literal(
                                        "w",
                                    ),
                                },
                            ],
                        ),
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

